syntax = "proto3";

option java_package = "grpcCode";

service PeerToPeer {
  rpc Ping(NodeInfoMSG) returns (SuccessMSG) {}

  rpc FindNode(FindNodeMSG) returns (stream NodeInfoMSG) {}

  rpc Store(SaveMSG) returns (SuccessMSG) {}

  rpc Find(FindMSG) returns ()
}

/**
  Empty message
 */
message EmptyMSG {

}

/**
  Message format for a basic info of a node
 */
message NodeInfoMSG {
  // Node identification
  bytes nodeId = 1;
  // IP of node
  string nodeIp = 2;
  // Port of the node
  int32 nodePort = 3;
}

message FindNodeMSG {
  NodeInfoMSG requester = 1;

  bytes wantedId = 2;
}

/**
  Message format for a save request
 */
message SaveMSG {
  NodeInfoMSG requester = 1;

  bytes key = 2;

  bytes value = 3;
}

/**
  Message format for a find request
 */
message FindMSG {
  NodeInfoMSG requester = 1;

  bytes key = 2;
}

message SuccessMSG {
  bool success = 1;
}